Added simple persons list.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="update_events_db">Update events database</string>
     <string name="events_download_completed">Completed downloading %1$d events</string>
     <string name="directions">Directions to ULB</string>
+    <string name="no_data">No data available.</string>
     <string name="error_title">Error</string>
     <string name="schedule_loading_error">An error occurred while updating the schedule. Please try again later.</string>
 
