--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="main_menu">Main menu</string>
     <string name="close_menu">Close menu</string>
     <string name="last_update">DB last updated: %1$s</string>
+    <string name="download_reminder_title">Update</string>
+    <string name="download_reminder_message">This will update the schedule database to the latest version. Make sure you are connected to the internet.</string>
     <string name="never">Never</string>
     <string name="menu_tracks">Tracks</string>
     <string name="menu_bookmarks">Starred</string>
