Added event sharing and code to retrieve the FOSDEM year from the database.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="certification_exam">Certification Exam</string>
     <string name="event_details">Event details</string>
     <string name="related_links_header">RELATED LINKS</string>
+    <string name="share">Share</string>
     <string name="search_events">Search events</string>
     <string name="search_settings_description">Events</string>
     <string name="search_hint">Event, track, person</string>
