--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="menu_bookmarks">Starred</string>
     <string name="menu_speakers">Speakers</string>
     <string name="menu_map">Map</string>
+    <string name="filter">Filter</string>
+    <string name="upcoming_only">Upcoming only</string>
     <string name="other">Other</string>
     <string name="keynote">Keynote</string>
     <string name="main_track">Main track</string>
