--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,6 +15,7 @@
     <!-- Main menu -->
     <string name="menu_tracks">Tracks</string>
     <string name="menu_bookmarks">Starred</string>
+    <string name="menu_live">Live</string>
     <string name="menu_speakers">Speakers</string>
     <string name="menu_map">Map</string>
 
@@ -27,6 +28,12 @@
     <plurals name="selected">
         <item quantity="other">%1$d selected</item>
     </plurals>
+
+    <!-- Live -->
+    <string name="next">Next</string>
+    <string name="next_empty">During FOSDEM, the events to come in the next 30 minutes will be shown here.</string>
+    <string name="now">Now</string>
+    <string name="now_empty">During FOSDEM, the events in progress will be shown here.</string>
 
     <!-- Track types -->
     <string name="other">Other</string>
@@ -102,9 +109,6 @@
 \nLicensed under the Apache License, version 2.0. Source available at <a href="https://github.com/cbeyls/fosdem-companion-android">https://github.com/cbeyls/fosdem-companion-android</a>. The FOSDEM logo is licensed under a CC-BY-SA 2.0 Belgium License.
 \n
 \nThis application makes use of the following libraries:
-\n- <a href="http://developer.android.com/tools/support-library/">Android Support Library</a><i>by The Android Open Source Project</i>
-\n- <a href="https://github.com/astuetz/PagerSlidingTabStrip">PagerSlidingTabStrip</a><i>by Andreas Stuetz</i>
-\n- <a href="http://viewpagerindicator.com/">ViewPagerIndicator</a><i>by Jake Wharton</i>
-\n- <a href="https://github.com/chrisbanes/PhotoView">PhotoView</a><i>by Chris Banes</i></string>
+\n- <a href="http://developer.android.com/tools/support-library/">Android Support Library</a><i>by The Android Open Source Project</i>\n- <a href="https://github.com/astuetz/PagerSlidingTabStrip">PagerSlidingTabStrip</a><i>by Andreas Stuetz</i>\n- <a href="http://viewpagerindicator.com/">ViewPagerIndicator</a><i>by Jake Wharton</i>\n- <a href="https://github.com/chrisbanes/PhotoView">PhotoView</a><i>by Chris Banes</i></string>
 
 </resources>
