--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -101,6 +101,7 @@
     <string name="more_info">More info</string>
 
     <!-- Others -->
+    <string name="room_map">Room map</string>
     <string name="directions">Directions to ULB</string>
     <string name="no_data">No data available.</string>
     <string name="about">About</string>
