--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,7 +10,12 @@
     <string name="download_reminder_message">This will update the schedule database to the latest version. Make sure you are connected to the internet.</string>
     <string name="never">Never</string>
     <string name="update_events_db">Update events database</string>
-    <string name="events_download_completed">Completed downloading %1$d events</string>
+    <string name="events_download_empty">No new events found</string>
+
+    <plurals name="events_download_completed">
+        <item quantity="one">Completed downloading %1$d event</item>
+        <item quantity="other">Completed downloading %1$d events</item>
+    </plurals>
 
     <!-- Main menu -->
     <string name="menu_tracks">Tracks</string>
