--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="download_reminder_message">This will update the schedule database to the latest version. Make sure you are connected to the internet.</string>
     <string name="never">Never</string>
     <string name="update_events_db">Update events database</string>
+    <string name="events_download_up_to_date">Database is already up-to-date</string>
     <string name="events_download_empty">No new events found</string>
 
     <plurals name="events_download_completed">
