Added Volley library for efficient image caching and handling network requests. Created Adapter, Model and Fragment to display Key Speakers section. Currently the data is static will be dynamic in future.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="menu_bookmarks">Bookmarks</string>
     <string name="menu_live">Live</string>
     <string name="menu_speakers">Speakers</string>
+    <string name="menu_key_speakers">Key Speakers</string>
     <string name="menu_map">Map</string>
 
     <!-- Bookmarks -->
@@ -118,5 +119,7 @@
 \n
 \n<small>This application makes use of the following libraries:
 \n- <a href="http://developer.android.com/tools/support-library/">Android Support Library</a><i> by The Android Open Source Project</i>\n- <a href="http://viewpagerindicator.com/">ViewPagerIndicator</a><i> by Jake Wharton</i>\n- <a href="https://github.com/chrisbanes/PhotoView">PhotoView</a><i> by Chris Banes</i></small></string>
+    <string name="placeholder_speaker">Placeholder Speaker Name</string>
+    <string name="placeholder_speaker_designation">Placeholder Speaker Designation</string>
 
 </resources>
