--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
 
     <!-- Main menu -->
     <string name="menu_tracks">Tracks</string>
+    <string name="menu_schedule">Schedule</string>
     <string name="menu_bookmarks">Bookmarks</string>
     <string name="menu_live">Live</string>
     <string name="menu_speakers">Speakers</string>
