--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">FOSDEM Companion</string>
+    <string name="app_name">FOSSASIA Companion</string>
 
     <!-- Main screen -->
     <string name="main_menu">Main menu</string>
@@ -38,9 +38,9 @@
 
     <!-- Live -->
     <string name="next">Next</string>
-    <string name="next_empty">During FOSDEM, the events to come in the next 30 minutes will be shown here.</string>
+    <string name="next_empty">During FOSSASIA, the events to come in the next 30 minutes will be shown here.</string>
     <string name="now">Now</string>
-    <string name="now_empty">During FOSDEM, the events in progress will be shown here.</string>
+    <string name="now_empty">During FOSSASIA, the events in progress will be shown here.</string>
 
     <!-- Track types -->
     <string name="other">Other</string>
@@ -118,7 +118,7 @@
 \nThe name FOSDEM and the gear logo are registered trademarks of FOSDEM VZW.  Used with permission.
 \n
 \n<small>This application makes use of the following libraries:
-\n- <a href="http://developer.android.com/tools/support-library/">Android Support Library</a><i> by The Android Open Source Project</i>\n- <a href="http://viewpagerindicator.com/">ViewPagerIndicator</a><i> by Jake Wharton</i>\n- <a href="https://github.com/chrisbanes/PhotoView">PhotoView</a><i> by Chris Banes</i></small></string>
+\n- <a href="http://developer.android.com/tools/support-library/">Android Support Library</a><i> by The Android Open Source Project</i>\n- <a href="http://viewpagerindicator.com/">ViewPagerIndicator</a><i> by Jake Wharton</i>\n- <a href="https://github.com/chrisbanes/PhotoView">PhotoView</a><i> by Chris Banes</i>\n- <a href="https://android.googlesource.com/platform/frameworks/volley">Volley</a><i> by AOSP</i></small></string>
     <string name="placeholder_speaker">Placeholder Speaker Name</string>
     <string name="placeholder_speaker_designation">Placeholder Speaker Designation</string>
 
