Issue solved : After Clicking on Track e.g. "Web" show the track name "Track - Web", dates of track and location on top + make "Tracks" clickable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,5 +126,6 @@
     <string name="title_activity_splash">Fossaisa</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_track">TrackActivity</string>
 
 </resources>
