--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,7 +123,7 @@
 \n- <a href="http://developer.android.com/tools/support-library/">Android Support Library</a><i> by The Android Open Source Project</i>\n- <a href="http://viewpagerindicator.com/">ViewPagerIndicator</a><i> by Jake Wharton</i>\n- <a href="https://github.com/chrisbanes/PhotoView">PhotoView</a><i> by Chris Banes</i>\n- <a href="https://android.googlesource.com/platform/frameworks/volley">Volley</a><i> by AOSP</i></small></string>
     <string name="placeholder_speaker">Placeholder Speaker Name</string>
     <string name="placeholder_speaker_designation">Placeholder Speaker Designation</string>
-    <string name="title_activity_splash">Fossaisa</string>
+    <string name="title_activity_splash">Fossasia</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_track">TrackActivity</string>
