--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,7 +66,7 @@
     <string name="settings">Settings</string>
     <string name="settings_notifications">Notifications</string>
     <string name="settings_notifications_enabled_title">Enable notifications</string>
-    <string name="settings_notifications_enabled_summary">If checked, this will notify you of bookmarked upcoming events</string>
+    <string name="settings_notifications_enabled_summary">If checked, this will notify you of upcoming bookmarked events</string>
     <string name="settings_notifications_vibrate_title">Vibrate</string>
     <string name="settings_notifications_vibrate_summary">Vibrate on notification</string>
     <string name="settings_notifications_led_title">Flash led</string>
@@ -74,11 +74,11 @@
     <string name="settings_notifications_delay_title">Notification time</string>
 
     <string-array name="settings_notifications_delay_entries">
-        <item>5 minutes</item>
-        <item>10 minutes</item>
-        <item>15 minutes</item>
-        <item>30 minutes</item>
-        <item>1 hour</item>
+        <item>5 minutes before</item>
+        <item>10 minutes before</item>
+        <item>15 minutes before</item>
+        <item>30 minutes before</item>
+        <item>1 hour before</item>
     </string-array>
     <string-array name="settings_notifications_delay_entry_values">
         <item>5</item>
@@ -87,8 +87,6 @@
         <item>30</item>
         <item>60</item>
     </string-array>
-
-    <string name="settings_notifications_delay_summary">Delay before getting notified of an upcoming bookmarked event</string>
 
     <!-- Track schedule -->
     <string name="in_progress_content_description">%1$s (in progress)</string>
