--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,6 +128,7 @@
     <string name="directions">Directions to ULB</string>
     <string name="navigation">On-site navigation</string>
     <string name="no_data">No data available.</string>
+    <string name="volunteer">Volunteer</string>
     <string name="about_text">Programmed by <a href="http://www.digitalia.be/">Christophe Beyls</a>.
 \n
 \nLicensed under the Apache License, version 2.0. Source available on <a href="https://github.com/cbeyls/fosdem-companion-android">GitHub</a>.
