--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,9 @@
     <string name="search_hint">Event, track, person</string>
     <string name="no_search_result">No result.</string>
 
+    <!-- External bookmarks -->
+    <string name="external_bookmarks_title">Your friend\'s bookmarks</string>
+
     <!-- Errors -->
     <string name="event_not_found_error">Unable to load the session details.\nMake sure the database has been updated to the latest version.</string>
     <string name="schedule_loading_error">An error occurred while updating the schedule. Please try again later.</string>
