--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,6 +73,18 @@
 
     <!-- Settings -->
     <string name="settings">Settings</string>
+    <string name="settings_appearance">Appearance</string>
+    <string name="settings_appearance_theme_title">Theme</string>
+    <string-array name="settings_appearance_theme_entries">
+        <item>System theme</item>
+        <item>Light theme</item>
+        <item>Dark theme</item>
+    </string-array>
+    <string-array name="settings_appearance_theme_values">
+        <item>-1</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
     <string name="settings_notifications">Notifications</string>
     <string name="settings_notifications_enabled_title">Enable notifications</string>
     <string name="settings_notifications_enabled_summary">If checked, this will notify you of upcoming bookmarked events</string>
@@ -82,7 +94,6 @@
     <string name="settings_notifications_led_title">Flash led</string>
     <string name="settings_notifications_led_summary">Blink led on notification</string>
     <string name="settings_notifications_delay_title">Notification time</string>
-
     <string-array name="settings_notifications_delay_entries">
         <item>5 minutes before</item>
         <item>10 minutes before</item>
@@ -97,7 +108,6 @@
         <item>30</item>
         <item>60</item>
     </string-array>
-
     <string name="settings_info">Info</string>
     <string name="settings_info_about_title">About</string>
     <string name="settings_info_version_title">Version</string>
