--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,8 +59,8 @@
 
     <!-- Search -->
     <string name="search_events">Search events</string>
-    <string name="search_settings_description">Events</string>
     <string name="search_hint">Event, track, person</string>
+    <string name="search_clear">Clear text</string>
     <string name="no_search_result">No result.</string>
 
     <!-- External bookmarks -->
@@ -73,7 +73,6 @@
     <string name="event_not_found_error">Unable to load the session details.\nMake sure the database has been updated to the latest version.</string>
     <string name="schedule_loading_error">An error occurred during schedule update. Check your device connectivity.</string>
     <string name="schedule_loading_retry_action">Retry</string>
-    <string name="search_length_error">The minimum search text length is 3 chars.</string>
 
     <!-- Settings -->
     <string name="settings">Settings</string>
