--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,10 @@
 
     <!-- Settings -->
     <string name="settings">Settings</string>
+    <string name="settings_general">General</string>
+    <string name="settings_general_use_device_time_zone_title">Use device time zone</string>
+    <string name="settings_general_use_device_time_zone_summary_off">Display dates and times using the conference time zone</string>
+    <string name="settings_general_use_device_time_zone_summary_on">Display dates and times using the device time zone</string>
     <string name="settings_appearance">Appearance</string>
     <string name="settings_appearance_theme_title">Theme</string>
     <string-array name="settings_appearance_theme_entries">
