chore: update PhotoView library source code URL

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -171,6 +171,6 @@
 \n- <a href="https://github.com/square/moshi">Moshi</a><i> by Square, Inc.</i>
 \n- <a href="https://github.com/JetBrains/kotlin">Kotlin Standard Library</a><i> by JetBrains s.r.o. and Kotlin Programming Language contributors</i>
 \n- <a href="https://github.com/Kotlin/kotlinx.coroutines">kotlinx.coroutines</a><i> by JetBrains s.r.o.</i>
-\n- <a href="https://github.com/chrisbanes/PhotoView">PhotoView</a><i> by Chris Banes, Marek Sebera and John Carlson</i></small></string>
+\n- <a href="https://github.com/Baseflow/PhotoView">PhotoView</a><i> by Chris Banes, Marek Sebera and John Carlson</i></small></string>
 
 </resources>
